# Simple_Websocket_in_C

./: CMakeLists.txt  README.md
client/: main.c
server/: main.c
